fixed spacing in trainer flickity.

--- a/themes/kin-athletics/sass/_archive-about.scss
+++ b/themes/kin-athletics/sass/_archive-about.scss
@@ -68,6 +68,7 @@ body.page-template-archive-trainer {
           border: 2px solid #a10000;
           border-radius: 50%;
           margin: auto;
+          width: 90%;
           height: 75%;
           background: #C6CDDF;
     
